vlib/v/checker/tests/cast_expr_T_type_err.vv
module main

fn main() {
	_ = A(0)
	_ = &A(unsafe { nil })
}
